--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--ALL GROUPS ACITIVTY-->
+    <string name="all_groups_title">Your groups</string>
     <!--ADD SOURCE FRAGMENT-->
     <string name="add_dialog_fragment_title_source">Add a new feed</string>
     <string name="add_dialog_fragment_feedtitle_source">The name of the feed</string>
