--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="delete_dialog_fragment_title">Do you want to delete this?</string>
     <string name="delete_dialog_fragment_message">Are you sure?</string>
     <!--GENERAL-->
+    <string name="nointernet">No internet connection</string>
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
     <string name="feed">Feed</string>
