--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <!-- ADD FRAGMENT -->
     <string name="manual">Manual</string>
     <string name="recommended">Recommended</string>
-    <string name="add_element_group_name">Enter the name of the new group</string>
+    <string name="new_group">Add a new group</string>
+    <string name="add_element_group_title">The name of the new group</string>
     <string name="add_element_fragment_title">Add a new feed</string>
     <string name="add_element_feed_title">The name of the feed</string>
     <string name="add_element_feed_description">The description of the feed</string>
