--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="delete_dialog_fragment_title">Do you want to delete this?</string>
     <string name="delete_dialog_fragment_message">Are you sure?</string>
     <!-- GENERAL -->
+    <string name="loading">Loading</string>
     <string name="nointernet">No internet connection</string>
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
