button is clickable with touch

--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <!-- ALL GROUPS ACITIVTY -->
     <string name="all_groups_title">Your groups</string>
     <string-array name="popupmenu_newsgroup">
-        <item >Delete</item>
-        <item >Rename</item>
+        <item >@string/delete</item>
+        <item >@string/rename</item>
     </string-array>
     <!-- ADD FRAGMENT -->
     <string name="manual">Manual</string>
