--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--NEWS ITEM DETAIL FRAGMENT-->
+
+    <!-- NEWS ITEM DETAIL FRAGMENT -->
     <string name="see_full_article">Web Page</string>
     <!-- ALL GROUPS ACITIVTY -->
     <string name="all_groups_title">Your groups</string>
+
     <string-array name="popupmenu_newsgroup">
-        <item >@string/delete</item>
-        <item >@string/rename</item>
+        <item>@string/delete</item>
+        <item>@string/rename</item>
     </string-array>
     <!-- ADD FRAGMENT -->
     <string name="manual">Manual</string>
@@ -24,6 +26,8 @@
     <string name="delete_dialog_fragment_title">Do you want to delete this?</string>
     <string name="delete_dialog_fragment_message">Are you sure?</string>
     <!-- GENERAL -->
+    <string name="search_hint">News title</string>
+    <string name="search">Search</string>
     <string name="loading">Loading</string>
     <string name="nointernet">No internet connection</string>
     <string name="delete">Delete</string>
@@ -44,4 +48,12 @@
     <string name="login_microsoft">Login with Microsoft</string>
     <string name="login_message">We use your name in order to sync your news across all devices</string>
     <string name="logout">Log out</string>
+    <string name="title_activity_search">SearchActivity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_activity_searchable">\@string/app_name</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_search_results">MainActivity</string>
+
 </resources>
