--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="delete_dialog_fragment_title">Do you want to delete this?</string>
     <string name="delete_dialog_fragment_message">Are you sure?</string>
     <!-- GENERAL -->
+    <string name="online">Online</string>
+    <string name="local">Local</string>
     <string name="search_hint">News title</string>
     <string name="search">Search</string>
     <string name="loading">Loading</string>
