showing date ! yey !

--- a/StiriDinRomania/src/main/res/values-ro/strings.xml
+++ b/StiriDinRomania/src/main/res/values-ro/strings.xml
@@ -30,7 +30,7 @@
     <string name="groups">Grupuri</string>
     <string name="feed">Feed</string>
     <string name="feeds">Feeduri</string>
-    <string name="app_name">Ştiri din România</string>
+    <string name="app_name">Ştiri din</string>
     <string name="action_settings">Settings</string>
     <string name="ok">OK</string>
     <string name="cancel">Anulează</string>
