--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -5,11 +5,18 @@
     <string name="see_full_article">Web Page</string>
     <!-- ALL GROUPS ACITIVTY -->
     <string name="all_groups_title">Your groups</string>
-
     <string-array name="popupmenu_newsgroup">
         <item>@string/delete</item>
         <item>@string/rename</item>
     </string-array>
+    <!--NEWS GROUP LIST-->
+    <string name="nofeedsadded">You have no news sources added. You can add news sources by pressing the add button. The add button can be found in the action bar, or if you hardware buttons, it can be found by clicking the menu button</string>
+    <string name="update_data">Refresh</string>
+    <!--SEARCH-->
+    <string name="search_hint">News title</string>
+    <string name="search">Search</string>
+    <string name="online">Online</string>
+    <string name="local">Local</string>
     <!-- ADD FRAGMENT -->
     <string name="category">Category</string>
     <string name="manual">Manual</string>
@@ -27,10 +34,6 @@
     <string name="delete_dialog_fragment_title">Do you want to delete this?</string>
     <string name="delete_dialog_fragment_message">Are you sure?</string>
     <!-- GENERAL -->
-    <string name="online">Online</string>
-    <string name="local">Local</string>
-    <string name="search_hint">News title</string>
-    <string name="search">Search</string>
     <string name="loading">Loading</string>
     <string name="nointernet">No internet connection</string>
     <string name="delete">Delete</string>
@@ -39,24 +42,16 @@
     <string name="feeds">Feeds</string>
     <string name="group">Group</string>
     <string name="groups">Groups</string>
-    <string name="app_id">498421953559265</string>
     <string name="app_name">News from</string>
-    <string name="action_settings">Settings</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
-    <string name="update_data">Update</string>
+
     <!-- LOGIN ACTIVITY -->
+    <string name="app_id">498421953559265</string>
     <string name="login_facebook">Login with Facebook</string>
     <string name="login_microsoft">Login with Microsoft</string>
     <string name="login_message">We use your name in order to sync your news across all devices</string>
     <string name="logout">Log out</string>
-    <string name="title_activity_search">SearchActivity</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="title_activity_searchable">\@string/app_name</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_search_results">MainActivity</string>
 
 </resources>
