--- a/StiriDinRomania/src/main/res/values-ro/strings.xml
+++ b/StiriDinRomania/src/main/res/values-ro/strings.xml
@@ -10,6 +10,7 @@
     <!--ALL GROUPS ACITIVTY-->
     <string name="all_groups_title">Gruprile tale</string>
     <!--ADD SOURCE FRAGMENT-->
+    <string name="categories">Categorii</string>
     <string name="category">Categorie</string>
     <string name="manual">Manual</string>
     <string name="recommended">Recomandate</string>
