--- a/StiriDinRomania/src/main/res/values/strings.xml
+++ b/StiriDinRomania/src/main/res/values/strings.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--SHARE-->
+
+    <!-- SHARE -->
     <string name="share">Share</string>
     <string name="share_end">. Read news on Android, iOS and WP8 with \"News from\"</string>
     <!-- NEWS ITEM DETAIL FRAGMENT -->
     <string name="see_full_article">Web Page</string>
-    <!--NEWSGROUP detail-->
+    <!-- NEWSGROUP detail -->
     <string-array name="popupmenu_newsource">
         <item>@string/delete</item>
     </string-array>
     <!-- NEWSGROUP list -->
     <string name="all_groups_title">Your groups</string>
+
     <string-array name="popupmenu_newsgroup">
         <item>@string/delete</item>
         <item>@string/rename</item>
     </string-array>
 
-    <!--NEWS GROUP LIST-->
+    <!-- NEWS GROUP LIST -->
     <string name="nofeedsadded">You have no news sources added. You can add news sources by pressing the "+" button. The add button can be found in the action bar, or if you hardware buttons, it can be found by clicking the menu button on the device.</string>
     <string name="update_data">Refresh</string>
-    <!--SEARCH-->
+    <!-- SEARCH -->
     <string name="search_hint">News title</string>
     <string name="search">Search</string>
     <string name="online">Online</string>
@@ -61,5 +63,8 @@
     <string name="login_microsoft">Login with Microsoft</string>
     <string name="login_message">We use your name in order to sync your news across all devices</string>
     <string name="logout">Log out</string>
+    <string name="title_activity_add_element_select_feed">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
